--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,2 +1,3 @@
 <% @artists.each do |a| %>
-  <div><%= a.name + " " + a.song_count.to_s + " song" %></div>  
+  <div><%= a.name + " " + a.song_count.to_s + " song" %></div>
+<% end %>  
