--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,4 @@
 <ul>
     <%= @artist.songs.each do |s| %>
-    <li><%= s.title, song_path(s) %></l1>
+    <li><%= link_to s.title, song_path(s) %></l1>
+    <% end %>
